<resources>
    <string name="app_name">AmG Sales Planner</string>
    <string name="action_settings">Add</string>
    <string name="login_title">AGENT LOGIN</string>
    <string name="register">I Don\'t Have Account</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="double_back_press_message">Press again to exit !!</string>
    <string name="plan_your_week">PLAN YOUR WEEK</string>
    <string name="view_your_plan">View Your Plan</string>
    <string name="calendar_summary">Calendar Summary</string>
    <string name="title_activity_list_of_agent">ListOfAgentActivity</string>
    <string name="title_activity_add_agent">AddAgentActivity</string>
    <string name="add_new_plan">ADD NEW PLAN</string>
    <string name="date_hint">Date</string>
    <string name="add_button">ADD</string>
    <string name="title_activity_modify_agent">Edit Plan</string>
    <string name="meeting_starting_time">Meeting Starting Time</string>
    <string name="meeting_ending_time">Meeting Ending Time</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_summary_view">SummaryViewActivity</string>
    <string name="title_activity_calendar_summary">CalendarSummaryActivity</string>
    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>

</resources>
