<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.amgeneralinsurance.amgsalesplanner.AddAgentActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/linearLayoutLogoLayout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_new_plan"
            android:textColor="@android:color/secondary_text_light"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Agency Name"
            android:ems="10"
            android:id="@+id/editTextAgencyName"
            android:layout_gravity="center_horizontal"
            android:background="@android:drawable/edit_text" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/date_hint"
            android:ems="10"
            android:id="@+id/editTextDate"
            android:layout_gravity="center_horizontal"
            android:background="@android:drawable/edit_text" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Agency Name"
            android:ems="10"
            android:id="@+id/spinnerPurpose"
            android:layout_gravity="center_horizontal"
            android:background="@android:drawable/edit_text" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:inputType="textPersonName"
            android:hint="Agency Objective"
            android:ems="10"
            android:id="@+id/editTextObjective"
            android:layout_gravity="center_horizontal"
            android:background="@android:drawable/edit_text" />
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@color/button_color"
            android:padding="5dp"
            android:text="@string/add_button"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:onClick="login" />

    </LinearLayout>
</RelativeLayout>
